# etaHEN-SDK

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
.github/workflows/: c-cpp.yml
Plugin_samples/Error_Disabling/: CMakeLists.txt  Makefile
Plugin_samples/Error_Disabling/source/: main.cpp  utils.cpp  utils.hpp
Plugin_samples/Game_Plugin_Loader/: CMakeLists.txt  Makefile
Plugin_samples/Game_Plugin_Loader/shellcode/: Shellcode.c  build.bat  make_string.py
Plugin_samples/Game_Plugin_Loader/source/: main.cpp  utils.cpp  utils.hpp
Plugin_samples/Illusion_cheats/: CMakeLists.txt  Makefile
Plugin_samples/Illusion_cheats/source/: game_patch_memory.cpp  game_patch_thread.cpp  game_patch_xml.cpp  main.cpp  server.hpp
Plugin_samples/PS5Debug/: CMakeLists.txt  Makefile
Plugin_samples/PS5Debug/source/: main.c  proc.c  process_utils.c  utils.c
Plugin_samples/itemzflow_xml_patches/: CMakeLists.txt  Makefile
Plugin_samples/itemzflow_xml_patches/source/: game_patch_memory.cpp  game_patch_memory.hpp  game_patch_thread.cpp  game_patch_xml.cpp  main.cpp
Plugin_samples/utility_daemon/: CMakeLists.txt  Makefile
Plugin_samples/utility_daemon/source/: klog.c  main.c
include/: global.h  ini.h  kernel_helpers.h  nid.hpp  sqlite3.h  util.hpp
include/elf/: elf.hpp
include/hijacker/: hijacker.hpp
include/kernel/: proc.hpp
include/nid_resolver/: resolver.h
libhijacker/: CMakeLists.txt  Makefile  cmake_install.cmake.tmp36e10
libhijacker/source/: backtrace.cpp  dbg.cpp  kernel.cpp  offsets.cpp  spawner.cpp
libhijacker/source/elf/: elf.cpp
